[tool.poetry]
name = "lqtimageviewer"
version = "0.3.0"
description = "A simple but flexible image viewer for PyQt that take numpy array as input."
authors = ["Liam Collod <monsieurlixm@gmail.com>"]
readme = "README.md"
packages = [
    { include = "lqtImageViewer" }
]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
numpy = "^1.25"
QtPy = "^2.4"

[tool.poetry.group.imageio]
optional = true
[tool.poetry.group.imageio.dependencies]
imageio = "*"

[tool.poetry.dev-dependencies]
black = "*"
PySide2 = "^5.15"
PySide2-stubs = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
