[project]
name = "lqtimageviewer"
version = "0.4.1"
description = "A simple but flexible image viewer for PyQt that take numpy array as input."
authors = [
    {name="Liam Collod", email = "monsieurlixm@gmail.com"},
]
readme = "README.md"
requires-python = ">=3.9,<3.11"
dependencies = [
    "numpy>=1.25",
    "QtPy>=2.4",
]

[tool.uv]
dev-dependencies = [
    "black>=24.10.0",
    "PySide2>=5.15",
    "PySide2-stubs",
]

[dependency-groups]
imageio = [
    "imageio",
]